fixed Look of tag autocompletion: in the case of many tag suggestions, the window of suggested tags was too long.

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -2512,6 +2512,11 @@ div.fsRow div.resizable-textarea textarea {
 	font-size:10px;
 }
 
+.ui-autocomplete { 
+	height: 150px; 
+	overflow-y: scroll; 
+}
+
 .ui-menu-item{
 	font-size:11px;
 }
